--- a/mtg/rivalsofixalan.html
+++ b/mtg/rivalsofixalan.html
@@ -12,24 +12,24 @@ layout: default
 	<td class="headerCell">Rarity</td>
 	<td class="headerCell">Notes</td>
     </tr>    
-	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439686">Trapjaw Tyrant</a></td><td>White</td><td>M</td><td></td></tr>
-	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439716">Timestream Navigator</a></td><td>Blue</td><td>M</td><td></td></tr>
-	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439745">Twilight Prophet</a></td><td>Black</td><td>M</td><td></td></tr>
-	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439768">Rekindling Phoenix</a></td><td>Red</td><td>M</td><td></td></tr>
-	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439801">Polyraptor</a></td><td>Green</td><td>M</td><td></td></tr>
-	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439809">Angrath, the Flame-Chained</a></td><td>Black/Red</td><td>M</td><td></td></tr>
-	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439811">Azor, the Lawbringer</a></td><td>White/Blue</td><td>M</td><td></td></tr>
-	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439814">Elenda, the Dusk Rose</a></td><td>White/Black</td><td>M</td><td></td></tr>
-	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439817">Huatli, Radiant Champion</a></td><td>White/Green</td><td>M</td><td></td></tr>
-	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439821">Kumena, Tyrant of Orazca</a></td><td>Blue/Green</td><td>M</td><td></td></tr>
-	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439836">Zacama, Primal Calamity</a></td><td>White/Red/Green</td><td>M</td><td></td></tr>
-	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439838">Azor's Gateway</a></td><td>-</td><td>M</td><td>Flip Artifact/Land</td></tr>
-	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439844">The Immortal Sun</a></td><td>-</td><td>M</td><td>Artifact</td></tr>
-	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=441891">Vraska, Scheming Gorgon</a></td><td>-</td><td>M</td><td>Planeswalker Deck</td></tr>
-	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=441895">Angrath, Minotaur Pirate</a></td><td>-</td><td>M</td><td>Planeswalker Deck</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439686">Trapjaw Tyrant</a></td><td>White</td><td>M</td><td>Dinosaur</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439716">Timestream Navigator</a></td><td>Blue</td><td>M</td><td>Human Pirate Wizard</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439745">Twilight Prophet</a></td><td>Black</td><td>M</td><td>Vampire Cleric</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439768">Rekindling Phoenix</a></td><td>Red</td><td>M</td><td>Phoenix</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439801">Polyraptor</a></td><td>Green</td><td>M</td><td>Dinosaur</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439809">Angrath, the Flame-Chained</a></td><td>Black/Red</td><td>M</td><td>Legendary Planeswalker</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439811">Azor, the Lawbringer</a></td><td>White/Blue</td><td>M</td><td>Legendary Sphinx</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439814">Elenda, the Dusk Rose</a></td><td>White/Black</td><td>M</td><td>Legendary Vampire Knight</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439817">Huatli, Radiant Champion</a></td><td>White/Green</td><td>M</td><td>Legendary Planeswalker</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439821">Kumena, Tyrant of Orazca</a></td><td>Blue/Green</td><td>M</td><td>Legendary Merfolk Shaman</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439836">Zacama, Primal Calamity</a></td><td>White/Red/Green</td><td>M</td><td>Legendary Elder Dinosaur</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439838">Azor's Gateway</a></td><td>-</td><td>M</td><td>Legendary Artifact / Land</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439844">The Immortal Sun</a></td><td>-</td><td>M</td><td>Legendary Artifact</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=441891">Vraska, Scheming Gorgon</a></td><td>-</td><td>M</td><td>Legendary Planeswalker Deck</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=441895">Angrath, Minotaur Pirate</a></td><td>-</td><td>M</td><td>Legendary Planeswalker Deck</td></tr>
 </table>
 
-<h1><a href="http://gatherer.wizards.com/Pages/Search/Default.aspx?action=advanced&output=checklist&sort=cn%20,cn%20,cn+&set=+[%22Rivals%20of%20Ixalan%22]&rarity=+[R]">Rares</a></h1>
+<h1><a href="http://gatherer.wizards.com/Pages/Search/Default.aspx?action=advanced&output=checklist&sort=cn%20,cn%20,cn%20+&set=+[%22Rivals%20of%20Ixalan%22]&rarity=+[R]&name=+![Negate]">Rares</a></h1>
 <table border="1" cellspacing="0" cellpadding="2" class="checklist">
     <tr class="headerRow">
         <td class="headerCell">#</td>
@@ -38,7 +38,57 @@ layout: default
         <td class="headerCell">Rarity</td>
         <td class="headerCell">Notes</td>
     </tr>
-	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439659">Bishop of Binding</a></td><td>White</td><td>R</td><td></td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439659">Bishop of Binding</a></td><td>White</td><td>R</td><td>Vampire Cleric</td></tr>
+	    <tr><td>1*</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439673">Paladin of Atonement</a></td><td>White</td><td>R</td><td>Vampire Knight, Foil</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439675">Radiant Destiny</a></td><td>White</td><td>R</td><td>Enchantment</td></tr>
+	    <tr><td>3</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439679">Slaughter the Strong</a></td><td>White</td><td>R</td><td>Sorcery</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439681">Sphinx's Decree</a></td><td>White</td><td>R</td><td>Sorcery</td></tr>
+	    <tr><td>3</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439685">Temple Altisaur</a></td><td>White</td><td>R</td><td>Dinosaur</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439687">Zetalpa, Primal Dawn</a></td><td>White</td><td>R</td><td>Legendary Elder Dinosaur</td></tr>
+	    <tr><td>4</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439688">Admiral's Order</a></td><td>Blue</td><td>R</td><td>Instant</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439690">Crafty Cutpurse</a></td><td>Blue</td><td>R</td><td>Human Pirate</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439697">Induced Amnesia</a></td><td>Blue</td><td>R</td><td>Enchantment</td></tr>
+	    <tr><td>3*</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439699">Kumena's Awakening</a></td><td>Blue</td><td>R</td><td>Enchantment, Foil</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439702">Nezahal, Primal Tide</a></td><td>Blue</td><td>R</td><td>Legendary Elder Dinosaur</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439703">Release to the Wind</a></td><td>Blue</td><td>R</td><td>Instant</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439708">Seafloor Oracle</a></td><td>Blue</td><td>R</td><td>Merfolk Wizard</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439717">Warkite Marauder</a></td><td>Blue</td><td>R</td><td>Human Pirate</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439721">Champion of Dusk</a></td><td>Black</td><td>R</td><td>Vampire Knight</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439723">Dead Man's Chest</a></td><td>Black</td><td>R</td><td>Enchantment</td></tr>
+	    <tr><td>3</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439725">Dire Fleet Poisoner</a></td><td>Black</td><td>R</td><td>Human Pirate</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439734">Mastermind's Acquisition</a></td><td>Black</td><td>R</td><td>Sorcery</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439743">Tetzimoc, Primal Death</a></td><td>Black</td><td>R</td><td>Legendary Elder Dinosaur</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439744">Tomb Robber</a></td><td>Black</td><td>R</td><td>Human Pirate</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439747">Vona's Hunger</a></td><td>Black</td><td>R</td><td>Instant</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439749">Blood Sun</a></td><td>Red</td><td>R</td><td>Enchantment</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439751">Brass's Bounty</a></td><td>Red</td><td>R</td><td>Sorcery</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439756">Dire Fleet Daredevil</a></td><td>Red</td><td>R</td><td>Human Pirate</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439757">Etali, Primal Storm</a></td><td>Red</td><td>R</td><td>Legendary Elder Dinosaur</td></tr>
+	    <tr><td>3</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439760">Form of the Dinosaur</a></td><td>Red</td><td>R</td><td>Enchantment</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439772">Silverclad Ferocidons</a></td><td>Red</td><td>R</td><td>Dinosaur</td></tr>
+	    <tr><td>2*</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439778">Tilonalli's Summoner</a></td><td>Red</td><td>R</td><td>Human Shaman, Foil</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439784">Deeproot Elite</a></td><td>Green</td><td>R</td><td>Merfolk Warrior</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439787">Ghalta, Primal Hunger</a></td><td>Green</td><td>R</td><td>Legendary Elder Dinosaur</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439793">Jadelight Ranger</a></td><td>Green</td><td>R</td><td>Merfolk Scout</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439799">Path of Discovery</a></td><td>Green</td><td>R</td><td>Enchantment</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439804">Tendershoot Dryad</a></td><td>Green</td><td>R</td><td>Dryad</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439807">Wayward Swordtooth</a></td><td>Green</td><td>R</td><td>Dinosaur</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439808">World Shaper</a></td><td>Green</td><td>R</td><td>Merfolk Shaman</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439815">Hadana's Climb</a></td><td>Blue/Green</td><td>R</td><td>Legendary Enchantment / Land</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439818">Journey to Eternity</a></td><td>Black/Green</td><td>R</td><td>Legendary Enchantment / Land</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439824">Path of Mettle</a></td><td>White/Red</td><td>R</td><td>Legendary Enchantment / Land</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439826">Profane Procession</a></td><td>White/Black</td><td>R</td><td>Legendary Enchantment / Land</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439828">Protean Raider</a></td><td>Blue/Red</td><td>R</td><td>Shapeshifter Pirate</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439832">Siegehorn Ceratops</a></td><td>White/Green</td><td>R</td><td>Dinosaur</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439834">Storm the Vault</a></td><td>Blue/Red</td><td>R</td><td>Legendary Enchantment / Land</td></tr>
+	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439837">Awakened Amalgam</a></td><td>-</td><td>R</td><td>Artifact Golem</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439840">Captain's Hook</a></td><td>-</td><td>R</td><td>Artifact Equipment</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439842">Golden Guardian</a></td><td>-</td><td>R</td><td>Artifact Golem / Land</td></tr>
+	    <tr><td>4</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439846">Silent Gravestone</a></td><td>-</td><td>R</td><td>Artifact</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439849">Arch of Orazca</a></td><td>-</td><td>R</td><td>Land</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=441894">Vraska's Scorn</a></td><td>Black</td><td>R</td><td>Sorcery, Planeswalker Deck</td></tr>
+	    <tr><td>2</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=441898">Angrath's Fury</a></td><td>Black/Red</td><td>R</td><td>Sorcery, Planeswalker Deck</td></tr>
+</table>
 <!--
 <h1>Uncommons</h1>
 <table border="1" cellspacing="0" cellpadding="2" class="checklist">
