--- a/mtg/rivalsofixalan.html
+++ b/mtg/rivalsofixalan.html
@@ -25,8 +25,8 @@ layout: default
 	    <tr><td>0</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439836">Zacama, Primal Calamity</a></td><td>White/Red/Green</td><td>M</td><td>Legendary Elder Dinosaur</td></tr>
 	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439838">Azor's Gateway</a></td><td>-</td><td>M</td><td>Legendary Artifact / Land</td></tr>
 	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=439844">The Immortal Sun</a></td><td>-</td><td>M</td><td>Legendary Artifact</td></tr>
-	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=441891">Vraska, Scheming Gorgon</a></td><td>-</td><td>M</td><td>Legendary Planeswalker Deck</td></tr>
-	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=441895">Angrath, Minotaur Pirate</a></td><td>-</td><td>M</td><td>Legendary Planeswalker Deck</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=441891">Vraska, Scheming Gorgon</a></td><td>-</td><td>M</td><td>Legendary Planeswalker, Planeswalker Deck</td></tr>
+	    <tr><td>1</td><td><a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=441895">Angrath, Minotaur Pirate</a></td><td>-</td><td>M</td><td>Legendary Planeswalker, Planeswalker Deck</td></tr>
 </table>
 
 <h1><a href="http://gatherer.wizards.com/Pages/Search/Default.aspx?action=advanced&output=checklist&sort=cn%20,cn%20,cn%20+&set=+[%22Rivals%20of%20Ixalan%22]&rarity=+[R]&name=+![Negate]">Rares</a></h1>
